--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -321,6 +321,7 @@
     }
    ],
    "source": [
+    "!pip install folium\n",
     "import folium\n",
     "manhattan_map = folium.Map(location=[40.7589, -73.9851], zoom_start=11)"
    ]
