automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -460,7 +460,7 @@
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    coordinates = [\n",
+    "    coordinates = [trip['pickup_lati']\n",
     "    pass"
    ]
   },
