automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -501,7 +501,7 @@
    "source": [
     "def to_marker(location):\n",
     "    \n",
-    "    marker = folium.CircleMarker(location = first_locat, radius=10)\n",
+    "    marker = folium.CircleMarker(location = location, radius=)\n",
     "    pass"
    ]
   },
