automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -495,19 +495,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def to_marker(location):\n",
     "    \n",
-    "    marker = folium.CircleMarker(location = location, radius=)\n",
+    "    marker = folium.CircleMarker(location = location, radius=6)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
