automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -545,7 +545,8 @@
    "source": [
     "def markers_from_trips(trips):\n",
     "    for trip in trips:\n",
-    "        location = location(trip)\n",
+    "        location = location(trips[trip])\n",
+    "        \n",
     "    pass"
    ]
   },
