automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -546,7 +546,7 @@
     "def markers_from_trips(trips):\n",
     "    for trip in trips:\n",
     "        location = location(trips[trip])\n",
-    "        \n",
+    "        marker = to_marker(location)\n",
     "    pass"
    ]
   },
