--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,6 +547,7 @@
     "    for trip in trips:\n",
     "        location = location(trips[trip])\n",
     "        marker = to_marker(location)\n",
+    "        return marker\n",
     "    pass"
    ]
   },
