automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -545,7 +545,7 @@
    "source": [
     "def markers_from_trips(trips):\n",
     "    for trip in trips:\n",
-    "        location = location(trips[trip])\n",
+    "        loca = location(trips[trip])\n",
     "        marker = to_marker(location)\n",
     "        return marker\n",
     "    pass"
