automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -544,7 +544,7 @@
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    for i in trips:\n",
+    "    for i in (0, len(trips) :\n",
     "        first_location = location(trip)\n",
     "        marker = to_marker(location)\n",
     "        return marker\n",
