automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -544,10 +544,8 @@
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    for i in (0, len(trips) - 1):\n",
-    "        current_location = location(trips[i])\n",
-    "        marker = to_marker(location)\n",
-    "        return marker\n",
+    "    parsed_trips\n",
+    "\n",
     "    pass"
    ]
   },
