automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -544,7 +544,8 @@
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    parsed_trips\n",
+    "    parsed_trips = parse_trips(trips)\n",
+    "    \n",
     "\n",
     "    pass"
    ]
