automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -545,7 +545,7 @@
    "source": [
     "def markers_from_trips(trips):\n",
     "    parsed_trips = parse_trips(trips)\n",
-    "    \n",
+    "    cleaned_trips = float\n",
     "\n",
     "    pass"
    ]
