automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -546,7 +546,7 @@
     "def markers_from_trips(trips):\n",
     "    parsed_trips = parse_trips(trips)\n",
     "    cleaned_trips = float_values(parsed_trips)\n",
-    "    for i in 9\n",
+    "    for i in (0, len(trips)-1):\n",
     "\n",
     "    pass"
    ]
