--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -547,7 +547,7 @@
     "    parsed_trips = parse_trips(trips)\n",
     "    cleaned_trips = float_values(parsed_trips)\n",
     "    for i in (0, len(trips)-1):\n",
-    "        new_location = location()\n",
+    "        new_location = location(cleaned_trips[i])\n",
     "\n",
     "    pass"
    ]
