--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -548,6 +548,7 @@
     "    cleaned_trips = float_values(parsed_trips)\n",
     "    for i in (0, len(trips)-1):\n",
     "        new_location = location(cleaned_trips[i])\n",
+    "        new_marker = \n",
     "\n",
     "    pass"
    ]
