automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -546,6 +546,7 @@
     "def markers_from_trips(trips):\n",
     "    parsed_trips = parse_trips(trips)\n",
     "    cleaned_trips = float_values(parsed_trips)\n",
+    "    circle)marke\n",
     "    for i in (0, len(trips)-1):\n",
     "        new_location = location(cleaned_trips[i])\n",
     "        new_marker = folium.CircleMarker(location = new_location, radius = 6)\n",
