--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -546,11 +546,11 @@
     "def markers_from_trips(trips):\n",
     "    parsed_trips = parse_trips(trips)\n",
     "    cleaned_trips = float_values(parsed_trips)\n",
-    "    circle)marke\n",
+    "    circle_markers = []\n",
     "    for i in (0, len(trips)-1):\n",
     "        new_location = location(cleaned_trips[i])\n",
     "        new_marker = folium.CircleMarker(location = new_location, radius = 6)\n",
-    "        return new_marker\n",
+    "        circle_\n",
     "\n",
     "    pass"
    ]
