automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -550,7 +550,8 @@
     "    for i in (0, len(trips)-1):\n",
     "        new_location = location(cleaned_trips[i])\n",
     "        new_marker = folium.CircleMarker(location = new_location, radius = 6)\n",
-    "        circle_\n",
+    "        circle_markers.append(new_marker)\n",
+    "    return circle)\n",
     "\n",
     "    pass"
    ]
