--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -590,16 +590,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[40.64499, -73.78115], [40.787172, -73.97763]]"
+       "2"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +607,7 @@
    "source": [
     "trip_markers and len(trip_markers) # 1000\n",
     "\n",
-    "list(map(lambda marker: marker.location, trip_markers[0:4]))\n",
+    "#list(map(lambda marker: marker.location, trip_markers[0:4]))\n",
     "# [[40.64499, -73.78115],\n",
     "#  [40.766931, -73.982098],\n",
     "#  [40.77773, -73.951902],\n",
