automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -556,11 +556,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "trip_markers = markers_from_trips(cleaned_trips)"
+    "trip_markers = markers_from_trips(cleaned_trips)\n",
+    "len(trips)"
    ]
   },
   {
