automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -547,7 +547,8 @@
     "    circle_markers = []\n",
     "    for i in (0, len(trips) - 1):\n",
     "        new_location = location(trips[i])\n",
-    "        to_marker(new_lo)\n",
+    "        to_marker(new_location)\n",
+    "        circle_markers.append\n",
     "    return circle_markers\n",
     "\n",
     "    pass"
