--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,8 +547,8 @@
     "    circle_markers = []\n",
     "    for i in (0, len(trips) - 1):\n",
     "        new_location = location(trips[i])\n",
-    "        marker = to_marker(new_location)\n",
-    "        circle_markers.append(ma)\n",
+    "        new_marker = to_marker(new_location)\n",
+    "        circle_markers.append(new_marker)\n",
     "    return circle_markers\n",
     "\n",
     "    pass"
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
