automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -539,16 +539,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-62-7592f96ea916>, line 9)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-62-7592f96ea916>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    pass\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -559,8 +561,9 @@
     "        new_marker = to_marker(new_location)\n",
     "        circle_markers.append(new_marker)\n",
     "    return circle_markers\n",
-    "len(trips)\n",
-    "    pass"
+    "\n",
+    "    pass\n",
+    "len(trips)"
    ]
   },
   {
