--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -556,7 +556,7 @@
    "source": [
     "def markers_from_trips(trips):\n",
     "    circle_markers = []\n",
-    "    list(map(lambda marker: m))\n",
+    "    list(map(lambda marker: marker))\n",
     "\n",
     "    pass\n"
    ]
