--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -544,7 +544,7 @@
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    return list(map(lambda trip: to_marker(location(trip))))\n",
+    "    return list(map(lambda trip: to_marker(location(trip)), ))\n",
     "\n",
     "    pass\n"
    ]
