automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -539,12 +539,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    return list(map(lambda trip: to_marker(location(trip)), ))\n",
+    "    return list(map(lambda trip: to_marker(location(trip)), trips))\n",
     "\n",
     "    pass\n"
    ]
