automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -550,12 +550,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<folium.vector_layers.CircleMarker at 0x7f433a5d0eb8>,\n",
+       " <folium.vector_layers.CircleMarker at 0x7f433a5d0d68>]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trip_markers = markers_from_trips(cleaned_trips)\n",
-    "trip"
+    "trip_markers"
    ]
   },
   {
