--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -286,7 +286,7 @@
     "\n",
     "# {'pickup_latitude': 40.64499,\n",
     "#  'pickup_longitude': -73.78115,\n",
-    "#  'trip_distance': 18.38}"
+    "#  'trip_distance': 18.38}\n"
    ]
   },
   {
