automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -193,13 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    combined = []\n",
-    "    for i in (0, len(trips) - 1):\n",
-    "        clean_trip = {}\n",
-    "        clean_trip ['trip_distance'] = trips[i]['trip_distance']\n",
-    "        clean_trip ['pickup_latitude'] = trips[i]['pickup_latitude']\n",
-    "        clean_trip ['pickup_longitude'] = trips[i]['pickup_longitude']\n",
-    "        combined.append(clean_trip)\n",
+    "    combined = \n",
     "    return combined\n",
     "    pass"
    ]
