--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    combined = \n",
+    "    combined = list(map(lamb))\n",
     "    return combined\n",
     "    pass"
    ]
