--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -202,7 +202,7 @@
    ],
    "source": [
     "def parse_trips(trips):\n",
-    "    combined = list(map(lambda trips: trips{'trip_distance', 'pickup_latitude', 'pickup_longitude'}, trips}))\n",
+    "    combined = list(map(lambda trips: trips['trip_distance', 'pickup_latitude', 'pickup_longitude'], trips))\n",
     "    return combined\n",
     "    pass"
    ]
