--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -188,9 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-78-995ddfa36a4f>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-78-995ddfa36a4f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    combined = list(map(lambda trips: (trips['trip_distance'] trips ['pickup_latitude'], trips['pickup_longitude']), trips))\u001b[0m\n\u001b[0m                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def parse_trips(trips):\n",
     "    combined = list(map(lambda trips: (trips['trip_distance'] trips ['pickup_latitude'], trips['pickup_longitude']), trips))\n",
