automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -202,7 +202,7 @@
    ],
    "source": [
     "def parse_trips(trips):\n",
-    "    combined = list(map(lambda trips: (trips['trip_distance'] trips ['pickup_latitude'], trips['pickup_longitude']), trips))\n",
+    "    combined = list(map(lambda trips: , trips))\n",
     "    return combined\n",
     "    pass"
    ]
