--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -202,7 +202,7 @@
    ],
    "source": [
     "def parse_trips(trips):\n",
-    "    parsed = trips[]\n",
+    "    parsed_distance = trips[]\n",
     "    combined = list(map(lambda trips: , trips))\n",
     "    return combined\n",
     "    pass"
