automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -202,7 +202,8 @@
    ],
    "source": [
     "def parse_trips(trips):\n",
-    "    def combined(trip):\n",
+    "    def combined(trips):\n",
+    "        \n",
     "    combined = list(map(lambda trips: , trips))\n",
     "    return combined\n",
     "    pass"
