automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -203,7 +203,7 @@
    "source": [
     "def parse_trips(trips):\n",
     "    def combined(trips):\n",
-    "        \n",
+    "        distance = \n",
     "    combined = list(map(lambda trips: , trips))\n",
     "    return combined\n",
     "    pass"
