automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,7 +205,7 @@
     "    def combined(trips):\n",
     "        distance = trips['trip_distance']\n",
     "        latitude = trips['pickup_latitude']\n",
-    "        l\n",
+    "        longitude = trips['pickup']\n",
     "    combined = list(map(lambda trips: , trips))\n",
     "    return combined\n",
     "    pass"
