automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -205,7 +205,8 @@
     "    def combined(trips):\n",
     "        distance = trips['trip_distance']\n",
     "        latitude = trips['pickup_latitude']\n",
-    "        longitude = trips['pickup']\n",
+    "        longitude = trips['pickup_longitude']\n",
+    "        return \n",
     "    combined = list(map(lambda trips: , trips))\n",
     "    return combined\n",
     "    pass"
