automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -188,18 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-78-995ddfa36a4f>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-78-995ddfa36a4f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    combined = list(map(lambda trips: (trips['trip_distance'] trips ['pickup_latitude'], trips['pickup_longitude']), trips))\u001b[0m\n\u001b[0m                                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
     "    def combined(trips):\n",
@@ -207,7 +198,7 @@
     "        latitude = trips['pickup_latitude']\n",
     "        longitude = trips['pickup_longitude']\n",
     "        return [distance, latitude, longitude]\n",
-    "    combined = list(map(lambda trips: , trips))\n",
+    "    combined = list(map(combined, trips))\n",
     "    return combined\n",
     "    pass"
    ]
