automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
     "        distance = trips['trip_distance']\n",
     "        latitude = trips['pickup_latitude']\n",
     "        longitude = trips['pickup_longitude']\n",
-    "        return [distance, latitude, longitude]\n",
+    "        return {distance, latitude, longitude}\n",
     "    combined = list(map(combined, trips))\n",
     "    return combined\n",
     "    pass"
