automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -205,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'-73.781149999999997', '18.379999999999999', '40.64499'}"
+       "1000"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
    "source": [
     "parsed_trips = parse_trips(trips)\n",
     "parsed_trips and parsed_trips[0]\n",
-    "l\n",
+    "len(parsed_trips)\n",
     "\n",
     "# {'pickup_latitude': '40.64499',\n",
     "#  'pickup_longitude': '-73.78115',\n",
