automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -245,10 +245,7 @@
    "outputs": [],
    "source": [
     "def float_values(trips):    \n",
-    "    for i in (0, len(trips)-1):\n",
-    "        trips[i]['trip_distance'] = float(trips[i]['trip_distance'])\n",
-    "        trips[i]['pickup_latitude'] = float(trips[i]['pickup_latitude'])\n",
-    "        trips[i]['pickup_longitude'] = float(trips[i]['pickup_longitude'])\n",
+    "    map()\n",
     "    return trips\n",
     "        \n",
     "    pass"
