automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -245,7 +245,7 @@
    "outputs": [],
    "source": [
     "def float_values(trips):    \n",
-    "    map(lambda: value, float(trips))\n",
+    "    map(lambda: value, float(trips[value][]))\n",
     "    return trips\n",
     "        \n",
     "    pass"
