automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -246,7 +246,7 @@
    "source": [
     "def float_values(trips):    \n",
     "    map(lambda: value, float(trips[value]['pickup_latitude']), trips)\n",
-    "    map(lambda: vlu)\n",
+    "    map(lambda: value, float(trips[value][]))\n",
     "    return trips\n",
     "        \n",
     "    pass"
