automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -244,7 +244,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def float_values(trips):    \n",
+    "def float_values(trips):\n",
+    "    def make_floats:\n",
+    "        \n",
     "    map(lambda: value, float(trips[value]['pickup_latitude']), trips)\n",
     "    map(lambda: value, float(trips[value]['pickup_longitude']), trips)\n",
     "    return trips\n",
