automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -246,7 +246,7 @@
    "source": [
     "def float_values(trips):\n",
     "    def make_floats(trips):\n",
-    "        return {}\n",
+    "        return {'trip_distance'}\n",
     "    map(lambda: value, float(trips[value]['pickup_latitude']), trips)\n",
     "    map(lambda: value, float(trips[value]['pickup_longitude']), trips)\n",
     "    return trips\n",
