automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -244,11 +244,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def float_values(trips):\n",
-    "    def make_floats(trips):\n",
-    "        return {'trip_distance'}\n",
+    "def float_values(trips):    \n",
     "    map(lambda: value, float(trips[value]['pickup_latitude']), trips)\n",
-    "    map(lambda: value, float(trips[value]['pickup_longitude']), trips)\n",
+    "    map(lambda: value, float(trips[value]['pickup_longitude']))\n",
     "    return trips\n",
     "        \n",
     "    pass"
