automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -544,7 +544,8 @@
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    for i in (o)\n",
+    "    for i in (0, len(trips)-1):\n",
+    "        \n",
     "    return\n",
     "    pass\n"
    ]
