automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -546,7 +546,7 @@
     "def markers_from_trips(trips):\n",
     "    for i in (0, len(trips)-1):\n",
     "        new_location = location(trips[i])\n",
-    "        marker = to_marker(new_l)\n",
+    "        marker = to_marker(new_location)\n",
     "    return\n",
     "    pass\n"
    ]
