automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -249,7 +249,7 @@
     "        trips[i]['trip_distance'] = float(trips[i]['trip_distance'])\n",
     "        trips[i]['pickup_latitude'] = float(trips[i]['pickup_latitude'])\n",
     "        trips[i]['pickup_longitude'] = float(trips[i]['pickup_longitude'])\n",
-    "    return trips\n",
+    "    return \n",
     "        \n",
     "    pass"
    ]
