--- a/index.ipynb
+++ b/index.ipynb
@@ -464,12 +464,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[40.64499, -73.78115]"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_location = location(first_trip) # [40.64499, -73.78115]\n",
-    "#first_location # [40.64499, -73.78115]"
+    "first_location # [40.64499, -73.78115]"
    ]
   },
   {
@@ -481,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +514,7 @@
        "6"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
