--- a/index.ipynb
+++ b/index.ipynb
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -570,18 +570,18 @@
        "[{'trip_distance': 18.38,\n",
        "  'pickup_latitude': 40.64499,\n",
        "  'pickup_longitude': -73.78115},\n",
-       " {'trip_distance': '1.3',\n",
-       "  'pickup_latitude': '40.766931',\n",
-       "  'pickup_longitude': '-73.982097999999993'},\n",
-       " {'trip_distance': '4.5',\n",
-       "  'pickup_latitude': '40.777729999999998',\n",
-       "  'pickup_longitude': '-73.951902000000004'},\n",
-       " {'trip_distance': '2.3999999999999999',\n",
-       "  'pickup_latitude': '40.795678000000002',\n",
-       "  'pickup_longitude': '-73.971048999999994'}]"
+       " {'trip_distance': 1.3,\n",
+       "  'pickup_latitude': 40.766931,\n",
+       "  'pickup_longitude': -73.982098},\n",
+       " {'trip_distance': 4.5,\n",
+       "  'pickup_latitude': 40.77773,\n",
+       "  'pickup_longitude': -73.951902},\n",
+       " {'trip_distance': 2.4,\n",
+       "  'pickup_latitude': 40.795678,\n",
+       "  'pickup_longitude': -73.971049}]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
        "[[40.64499, -73.78115], [40.787172, -73.97763]]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
