automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -205,18 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'trip_distance': 18.38,\n",
-       " 'pickup_latitude': 40.64499,\n",
-       " 'pickup_longitude': -73.78115}"
+       "1000"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +222,7 @@
    "source": [
     "parsed_trips = parse_trips(trips)\n",
     "parsed_trips and parsed_trips[0]\n",
-    "len(par)\n",
+    "len(parsed_trips)\n",
     "\n",
     "# {'pickup_latitude': '40.64499',\n",
     "#  'pickup_longitude': '-73.78115',\n",
@@ -280,7 +278,7 @@
    ],
    "source": [
     "cleaned_trips[0]\n",
-    "\n",
+    "len(cl)\n",
     "# {'pickup_latitude': 40.64499,\n",
     "#  'pickup_longitude': -73.78115,\n",
     "#  'trip_distance': 18.38}\n"
