automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -260,25 +260,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'trip_distance': 18.38,\n",
-       " 'pickup_latitude': 40.64499,\n",
-       " 'pickup_longitude': -73.78115}"
+       "1000"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cleaned_trips[0]\n",
-    "len(cl)\n",
+    "len(cleaned_trips)\n",
     "# {'pickup_latitude': 40.64499,\n",
     "#  'pickup_longitude': -73.78115,\n",
     "#  'trip_distance': 18.38}\n"
