automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -548,11 +548,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "trip_markers = markers_from_trips(cleaned_trips)"
+    "trip_markers = markers_from_trips(parsed_trips)"
    ]
   },
   {
