automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -577,18 +577,18 @@
        "  'pickup_longitude': -73.971049}]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cleaned_trips[0:4]"
+    "parsed_trips[0:4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        "2"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
