automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -560,11 +560,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<folium.vector_layers.CircleMarker at 0x7f433a608d68>,\n",
+       " <folium.vector_layers.CircleMarker at 0x7f433a608e80>]"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "trip_markers = markers_from_trips(parsed_trips)"
+    "trip_markers = markers_from_trips(parsed_trips)\n",
+    "trip_markers"
    ]
   },
   {
