--- a/index.ipynb
+++ b/index.ipynb
@@ -1647,6 +1647,7 @@
    "outputs": [],
    "source": [
     "def map_from(location, zoom_amount):\n",
+    "    return folium.Map(location-)\n",
     "    pass"
    ]
   },
