automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1722,7 +1722,7 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    \n",
+    "    map(ob)\n",
     "    pass"
    ]
   },
