--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1717,12 +1717,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-144-84c0106b0042>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-144-84c0106b0042>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    map(marker: marker.addto(map_obj), markers)\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    map(marker: marker.addto(map_obj)\n",
+    "    map(marker: marker.addto(map_obj), markers)\n",
     "    pass"
    ]
   },
