automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1731,7 +1731,7 @@
    ],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    map(marker: marker.addto(map_obj), markers)\n",
+    "    map(lambda:marker: marker.addto(map_obj), markers)\n",
     "    pass"
    ]
   },
