automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1717,27 +1717,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-145-b06c1663b950>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-145-b06c1663b950>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    map(lambda: marker: marker.addto(map_obj), markers)\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    map(lambda: marker: marker.addto(map_obj), markers)\n",
+    "    map(lambda marker: marker.addto(map_obj), markers)\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {
     "scrolled": false
    },
@@ -1748,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
