--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1717,19 +1717,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    map(lambda marker: marker.addto(map_obj), markers)\n",
-    "    \n",
+    "    return map_obj\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 150,
    "metadata": {
     "scrolled": false
    },
