--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1717,19 +1717,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    map(lambda marker, map_obj: markermarker.addto(map_obj), markers)\n",
+    "    map(lambda marker, map_obj: marker and marker.addto(map_obj), markers)\n",
     "    return map_obj\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 153,
    "metadata": {
     "scrolled": false
    },
