--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1722,7 +1722,7 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    map(lambda marker, map_obj: marker and marker.addto(map_obj), markers)\n",
+    "    map(lambda marker, map_obj: marker.addto(map_obj), markers)\n",
     "    return map_obj\n",
     "    pass"
    ]
