--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1717,19 +1717,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    map(lambda marker, map_obj: marker.addto(map_obj), markers)\n",
+    "    map(lambda marker: marker.addto(map_obj), markers)\n",
     "    return map_obj\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 160,
    "metadata": {
     "scrolled": false
    },
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1752,7 @@
        "<folium.folium.Map at 0x7f433a41d2e8>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
