--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1722,7 +1722,8 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "    map(lambda marker: marker.addto(map_obj), markers)\n",
+    "    for i in list(range(0, len(markers))):\n",
+    "        \n",
     "    return map_obj\n",
     "    pass"
    ]
