--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1723,7 +1723,8 @@
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for i in list(range(0, len(markers))):\n",
-    "        \n",
+    "        marker = markers[i]\n",
+    "        marker.addto(map_obj)\n",
     "    return map_obj\n",
     "    pass"
    ]
