--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1833,12 +1833,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    neighbor_trip['distance_from_selected'] = \n",
+    "    neighbor_trip['distance_from_selected'] = distance_location(selected_trip, neighbor_trip)\n",
+    "    return neighbor_trip\n",
     "    pass"
    ]
   },
