--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1845,9 +1845,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pickup_latitude': 40.766931,\n",
+       " 'pickup_longitude': -73.982098,\n",
+       " 'trip_distance': 1.3,\n",
+       " 'distance_from_selected': 0.23505256047318146}"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distance_between_neighbors(first_trip, second_trip)\n",
     "\n",
@@ -1887,6 +1901,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
+    "    \n",
     "    pass"
    ]
   },
