--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1896,12 +1896,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    distance_list = list(map(distance_between_neighbors, neighbors))\n",
+    "    distance_list = list(map(distance_between_neighbors, selected_individual, neighbors))\n",
+    "    exclude_first_neighbor = filter()\n",
     "    pass"
    ]
   },
