automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1902,7 +1902,8 @@
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    distance_list = list(map(distance_between_neighbors, selected_individual, neighbors))\n",
-    "    exclude_first_neighbor = filter()\n",
+    "    exclude_first_neighbor = filter(lambda x: x != selected_individual, distance_list)\n",
+    "    return exclude_f\n",
     "    pass"
    ]
   },
