automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1903,7 +1903,7 @@
     "def distance_all(selected_individual, neighbors):\n",
     "    distance_list = []\n",
     "    for i in list(range(len(neighbors))):\n",
-    "        \n",
+    "        distance_between = distance_between_neighbors(selected)\n",
     "    return exclude_first_neighbor\n",
     "    pass"
    ]
