--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1955,7 +1955,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    \n",
+    "    for i in \n",
     "    pass"
    ]
   },
