automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1955,8 +1955,8 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    for i in list(range(0, len(trips))):\n",
-    "        if distance_from_selected[i] \n",
+    "    for i in list(range(0, len(trips)-1)):\n",
+    "        if distance_from_selected[i] > distance_from_selected\n",
     "    pass"
    ]
   },
