--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1955,7 +1955,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    for i in list(range(0, len(trips)-1)):\n",
+    "    distance_list = \n",
     "    pass"
    ]
   },
