--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1955,7 +1955,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    distance_list = \n",
+    "    distance_list = distance_all(selected_trip, trips)\n",
     "    pass"
    ]
   },
