automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1950,15 +1950,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    distance_list = distance_all(selected_trip, trips)\n",
-    "    def sort_function(:\n",
-    "        return \n",
-    "    distance_list.sort(key = distance_list)\n",
+    "    def sort_function(trip):\n",
+    "        return trips['distance_from_selected']\n",
+    "    distance_list.sort(key = sort_function)\n",
     "    pass"
    ]
   },
