automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1950,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1960,14 +1960,37 @@
     "        return trip['distance_from_selected']\n",
     "    distance_list.sort(key = sort_function)\n",
     "    truncated_list = distance_list[0:number]\n",
+    "    return truncated_list\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 188,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'trip_distance': 7.78,\n",
+       "  'pickup_latitude': 40.64483,\n",
+       "  'pickup_longitude': -73.781578,\n",
+       "  'distance_from_selected': 0.0004569288784918792},\n",
+       " {'trip_distance': 12.7,\n",
+       "  'pickup_latitude': 40.644657,\n",
+       "  'pickup_longitude': -73.782229,\n",
+       "  'distance_from_selected': 0.0011292165425673159},\n",
+       " {'trip_distance': 17.3,\n",
+       "  'pickup_latitude': 40.648509,\n",
+       "  'pickup_longitude': -73.783508,\n",
+       "  'distance_from_selected': 0.0042359798158141185}]"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_trip = {'pickup_latitude': 40.64499,\n",
     "'pickup_longitude': -73.78115,\n",
